Bug 20182 - There is a misprint in the spec for cairo_image_surface_create_for_data() function
Summary: There is a misprint in the spec for cairo_image_surface_create_for_data() fun...
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: image backend (show other bugs)
Version: 1.8.6
Hardware: All All
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-18 01:16 UTC by Truc Truong
Modified: 2009-06-03 02:50 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Truc Truong 2009-02-18 01:16:04 UTC
In the spec for cairo_image_surface_create_for_data(), the standard states:
"The initial contents of buffer will be used as the inital image contents"

This should be changed as follows:
"The initial contents of data will be used as the inital image contents"

Please, give us your decision.

Thank you very much for your time.
Comment 1 Chris Wilson 2009-06-03 02:50:06 UTC
Fixed, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.