[image] Doc typo.

Correct parameter reference as pointed out by
https://bugs.freedesktop.org/show_bug.cgi?id=20182